# llm-gateway

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.benchmark  Dockerfile.e2e  Dockerfile.edge  Dockerfile.profile  LICENSE  Makefile  README.md  SOLUTION_SUMMARY.md  TAG.md  config.discovery.example.yaml  config.json  config.plugins.example.json  config.providers.example.json  docker-compose.discovery.example.yml  docker-compose.discovery.yml  docker-compose.yml  historico-de-prompts.md  llm-gateway  policy.json
.claude/: settings.local.json
.claude/agents/: system-architecture-designer.md
.github/workflows/: build.yml  ci.yml  deploy.yml
benchmark-reports/: report-gemma3_1b_gemma3_4b_gemma3_12b-20260226-164035.csv  report-gemma3_1b_gemma3_4b_gemma3_12b-20260226-164035.json  report-gemma3_1b_gemma3_4b_gemma3_12b-20260226-164035.md  report-gemma3_1b_gemma3_4b_gemma3_12b-20260226-164035_questions_and_answers.txt
build-e2e/: CMakeCache.txt  Makefile  cmake_install.cmake  e2e_core_plugins_test
docs/: ARCHITECTURE.md  COMPARISON_HERMES_VS_ALLTRUE.md  POSICIONAMENTO.md  briefing.md
docs/spec/: ADR-01-CORE-VS-PLUGIN.md  RF-01-FUNCIONAL.md  RF-02-FUNCIONAL.md  RF-03-FUNCIONAL.md  RF-04-FUNCIONAL.md  RF-05-FUNCIONAL.md  RF-06-FUNCIONAL.md  RF-06-UX.md  RF-07-AI.md  RF-07-FUNCIONAL.md  RF-08-FUNCIONAL.md  RF-09-FUNCIONAL.md  RF-10-FUNCIONAL.md  RF-11-FUNCIONAL.md  RF-12-FUNCIONAL.md  RF-13-FUNCIONAL.md  RF-14-AI.md  RF-14-FUNCIONAL.md  RF-15-AI.md  RF-15-FUNCIONAL.md  RF-16-FUNCIONAL.md  RF-17-FUNCIONAL.md  RF-18-AI.md  RF-18-FUNCIONAL.md  RF-19-FUNCIONAL.md  RF-20-FUNCIONAL.md  RF-21-FUNCIONAL.md  RF-22-FUNCIONAL.md  RF-23-FUNCIONAL.md  RF-24-FUNCIONAL.md  RF-25-FUNCIONAL.md  RF-26-FUNCIONAL.md  RF-27-FUNCIONAL.md  RF-28-FUNCIONAL.md  RF-29-FUNCIONAL.md  RF-30-FUNCIONAL.md  RF-31-FUNCIONAL.md  RF-31-OPENAPI.yaml
docs/specs/: RF-10-ADENDO-TENANT-CTX.md  RF-32-AI.md  RF-32-FUNCIONAL.md  RF-33-FUNCIONAL.md  RF-34-FUNCIONAL.md  RF-35-FUNCIONAL.md
hermes-dashboard/: .env.example  .gitignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  policy.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
hermes-dashboard/.cursor/reports/: report.schema.json
hermes-dashboard/.github/: dependabot.yml
hermes-dashboard/.github/workflows/: ci.yml
hermes-dashboard/scripts/: generate-report.js  lint-gate.js  metrics-collector.js  policy-check.js  run-gates.js  test-gate.js  validate-skeleton.js
hermes-dashboard/src/: App.tsx  config.ts  env.d.ts  i18n.ts  main.tsx  vite-env.d.ts
hermes-dashboard/src/api/: gateway.ts  menu.ts
hermes-dashboard/src/assets/: style.css
hermes-dashboard/src/components/: CommandPalette.tsx  ConfirmDialog.stories.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  EmptyState.stories.tsx  EmptyState.test.tsx  EmptyState.tsx  ImpersonationBanner.tsx  Loadable.tsx  Loader.tsx  MainCard.tsx  RoleGuard.test.tsx  RoleGuard.tsx  ScrollTop.tsx  SkeletonLoader.stories.tsx  SkeletonLoader.tsx
hermes-dashboard/src/contexts/: AnnouncerContext.test.tsx  AnnouncerContext.tsx  AuthContext.test.tsx  AuthContext.tsx  ConfigContext.tsx  EmpresaAtivaContext.tsx  SWRConfigProvider.tsx  SnackbarContext.tsx
hermes-dashboard/src/hooks/: useConfig.ts  useFocusOnRouteChange.ts  useLocalStorage.ts  useNotifications.ts  useUsers.ts
hermes-dashboard/src/lib/: authClient.ts  fetcher.test.ts  fetcher.ts  marketplaceApi.ts  mockAuth.test.ts  mockAuth.ts  vitals.ts
hermes-dashboard/src/locales/: en-US.ts  pt-BR.ts
hermes-dashboard/src/menu-items/: dashboard.ts  index.ts
hermes-dashboard/src/mocks/: dashboardData.ts  db.ts  empresas.ts
hermes-dashboard/src/routes/: AuthGuard.tsx  LoginRoutes.tsx  MainRoutes.tsx  index.tsx
hermes-dashboard/src/test/: helpers.tsx  setup.ts
hermes-dashboard/src/themes/: custom-shadows.ts  index.tsx  palette.ts  typography.ts
hermes-dashboard/src/types/: gateway.ts  theme.d.ts
hermes-dashboard/src/utils/: colorUtils.ts  getColors.ts  getShadow.ts  password-strength.ts  password-validation.ts  themeVars.ts
k8s/: configmap.yaml  deployment.yaml  gateway-configmap.yaml  gateway-deployment.yaml  gateway-secret.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  ollama-statefulset.yaml  pdb.yaml  pvc.yaml  rbac.yaml  secrets.yaml  service.yaml
scripts/: README.md
scripts/benchmark/: benchmark_prompts.json  benchmark_runner.py  benchmark_sync.sh  benchmark_tools.json
scripts/benchmark-models/: CMakeLists.txt  README.md  benchmark_models_test.cpp  benchmark_suite_test.cpp  prompts.cpp  prompts.h
scripts/benchmark-models/metrics/: latency_meter.h  resource_monitor.h  token_counter.h
scripts/benchmark-models/scoring/: expected_answers.cpp  expected_answers.h  logic_validator.cpp  logic_validator.h  math_validator.cpp  math_validator.h  score_utils.cpp  score_utils.h
scripts/docker/: run_with_docker.sh
scripts/e2e-core-with-plugins/: CMakeLists.txt  README.md  config.e2e.json  e2e_core_plugins_test.cpp
scripts/stress/: stress_test.sh
scripts/test/: test_gateway.sh
scripts/unit-tests/: CMakeLists.txt  test_security_plugins.cpp
src/: api_keys.cpp  api_keys.h  benchmark.cpp  benchmark.h  cache.h  chunk_queue.h  config.h  core_services.cpp  core_services.h  crypto.h  dashboard.h  edge_config.h  enterprise_loader.h  gateway.cpp  gateway.h  logger.h  main.cpp  metrics.h  metrics_interface.h  metrics_minimal.cpp  metrics_minimal.h  ollama_client.cpp  ollama_client.h  ollama_provider.cpp  ollama_provider.h  openai_custom_provider.cpp  openai_custom_provider.h  openapi_spec.h  plugin.cpp  plugin.h  provider.h  provider_router.cpp  provider_router.h  rate_limiter.h  request_queue.cpp  request_queue.h  tenant_ctx.h  update_checker.cpp  update_checker.h  version.h
src/discovery/: config_validator.cpp  config_validator.h  configuration_watcher.cpp  configuration_watcher.h  docker_provider.cpp  docker_provider.h  dynamic_config.h  file_provider.cpp  file_provider.h  kubernetes_provider.cpp  kubernetes_provider.h
(+174 files in other folders)
